<resources>
    <string name="app_name">WorkoutRepo</string>
    <string name="btn_light_mode">Current mode Auto, Switch to Light mode</string>
    <string name="btn_auto_mode">Current mode Dark, Switch to Auto mode</string>
    <string name="btn_dark_mode">Current mode Light, Switch to Dark mode</string>
    <string name="expand_notes_btn">Expand notes</string>

    <!-- Confirmation Dialog -->
    <string name="dialog_confirm_title">Confirm Action</string>
    <string name="dialog_confirm_message">Exit without saving?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="githubIcon_button">Go to GitHub Repository</string>
    <string name="guide_button">Open Usage guide and app settings</string>
</resources>