<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    app:layoutDescription="@xml/activity_main_scene"
    app:layout_constraintVertical_chainStyle="packed">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageButton
            android:id="@+id/guide_btn"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/info_38dp"
            android:alpha="0.2"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:fontFamily="@font/atkinsonhyperlegiblenext_medium"
            android:letterSpacing="0.05"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ScrollView
            android:id="@+id/btn_scroll"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            android:scrollbars="none"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="12dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/theme_btn_container"
                    android:layout_width="60dp"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="1"
                    android:alpha="0.5">

                    <ImageButton
                        android:id="@+id/btn_light"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_light_mode"
                        android:scaleX="1.1"
                        android:scaleY="1.1"
                        android:visibility="visible"
                        android:elevation="2dp"
                        app:srcCompat="@drawable/light_mode"
                        app:tint="?attr/colorOnPrimary"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />

                    <ImageButton
                        android:id="@+id/btn_dark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_dark_mode"
                        android:scaleX="1.1"
                        android:scaleY="1.1"
                        android:visibility="visible"
                        android:elevation="2dp"
                        app:srcCompat="@drawable/dark_mode"
                        app:tint="?attr/colorOnPrimary"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />

                    <ImageButton
                        android:id="@+id/btn_auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_auto_mode"
                        android:scaleX="1.1"
                        android:scaleY="1.1"
                        android:visibility="visible"
                        android:elevation="2dp"
                        app:srcCompat="@drawable/auto_mode"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageButton
                    android:id="@+id/githubIcon"
                    android:layout_width="60dp"
                    android:layout_height="?attr/actionBarSize"
                    app:srcCompat="@drawable/github_mark"
                    android:background="@color/transparent"
                    android:scaleX="0.60"
                    android:scaleY="0.60"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/guide_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/weekPager"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        android:descendantFocusability="afterDescendants"
        android:visibility="visible"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/weekPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/buttonBar"
        app:layout_constraintVertical_chainStyle="packed"/>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:paddingHorizontal="26dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekPager"
        app:layout_constraintVertical_bias="0"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/browseWorkouts"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="48dp"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/rounded_corners"
            android:elevation="2dp"
            app:srcCompat="@drawable/list_38dp"/>

        <ImageButton
            android:id="@+id/stravaAccess"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="3dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/strava_2"
            android:background="@drawable/rounded_corners_strava"
            android:elevation="2dp"
            android:visibility="visible"/>
    </LinearLayout>

    <!-- Much later - Another image button To access the Page where all these workouts will be listed Along with images. And another image button Where I'll find the entire repository of the Workouts. -->

</androidx.constraintlayout.motion.widget.MotionLayout>